--- a/main.html
+++ b/main.html
@@ -21,14 +21,26 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+			  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+			  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+			  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+			  <a href="#"><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+		  <diV class="links">
+			<a href="#">Home</a>
+			<a href="#">Contact</a>
+			<a href="#">About us</a>
+			<a href="#">Get Started</a>
         </div>
       </div>
       <div class="bottom-details">
         <!-- your code here -->
+		  <p>Copyright @ 2021 company</p>
+		  <p>Privacy policy</p>
       </div>
     </footer>
   </body>
