--- a/main.html
+++ b/main.html
@@ -35,6 +35,27 @@
 			<a href="#">Contact</a>
 			<a href="#">About us</a>
 			<a href="#">Get Started</a>
+		  </div>
+
+			<div class="services">
+				<a href="#">App Design</a>
+				<a href="#">Web Design</a>
+				<a href="#">Logo Design</a>
+				<a href="#">Banner Design</a>
+			</div>
+
+			<div class="other-services">
+				<a href="#">SEO</a>
+				<a href="#">Content Marketing</a>
+				<a href="#">Prints</a>
+				<a href="#">Social Media</a>
+			</div>
+
+			<div class="Contact">
+				<a href="#">+91 8879887262</a>
+				<a href="#">+91 8879887262</a>
+				<a href="#">contact@company.com</a>
+			</div>
         </div>
       </div>
       <div class="bottom-details">
