--- a/main.html
+++ b/main.html
@@ -30,21 +30,21 @@
         </div>
         <div class="link-boxes">
           <!-- your code here -->
-		  <diV class="links">
+		  <diV class="Links">
 			<a href="#">Home</a>
 			<a href="#">Contact</a>
 			<a href="#">About us</a>
 			<a href="#">Get Started</a>
 		  </div>
 
-			<div class="services">
+			<div class="Services">
 				<a href="#">App Design</a>
 				<a href="#">Web Design</a>
 				<a href="#">Logo Design</a>
 				<a href="#">Banner Design</a>
 			</div>
 
-			<div class="other-services">
+			<div class="Other-Services">
 				<a href="#">SEO</a>
 				<a href="#">Content Marketing</a>
 				<a href="#">Prints</a>
