--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
           </div>
         </div>
         <div class="link-boxes">
+			<p>Links</p>
           <!-- your code here -->
 		  <diV class="Links">
 			<a href="#">Home</a>
