--- a/main.html
+++ b/main.html
@@ -29,23 +29,25 @@
           </div>
         </div>
         <div class="link-boxes">
-			<p>Links</p>
           <!-- your code here -->
 		  <diV class="Links">
+			<p>Links</p>
 			<a href="#">Home</a>
 			<a href="#">Contact</a>
 			<a href="#">About us</a>
 			<a href="#">Get Started</a>
 		  </div>
-
+              
 			<div class="Services">
+				<p>Services</p>
 				<a href="#">App Design</a>
 				<a href="#">Web Design</a>
 				<a href="#">Logo Design</a>
 				<a href="#">Banner Design</a>
 			</div>
 
-			<div class="Other-Services">
+			<div class="Other-services">
+				<p>Other-services</p>
 				<a href="#">SEO</a>
 				<a href="#">Content Marketing</a>
 				<a href="#">Prints</a>
@@ -53,6 +55,7 @@
 			</div>
 
 			<div class="Contact">
+				<p>Contact</p>
 				<a href="#">+91 8879887262</a>
 				<a href="#">+91 8879887262</a>
 				<a href="#">contact@company.com</a>
